# lifen_test

./: .gitignore  README.md  __main__.py  makefile  pyproject.toml
core/: app.py
data/: docs_save.json
data/utils/: detect_word.txt
lifen_test/: __main__.py
lifen_test/core/: app.py
lifen_test/data/save/: docs.json
tests/: test.py
