[tool.poetry]
name = "lifen_test"
version = "0.1.0"
description = ""
authors = ["Mathys NOIR <mathys.noir@edu.ece.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.9.0"
black = "^23.12.0"
mypy = "^1.7.1"
pylint = "^3.0.3"
isort = "^5.13.2"
pytest = "^7.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "__main__:main"